--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -322,6 +322,15 @@
     </servlet-mapping>
 
     <servlet>
+        <servlet-name>rdfTemplateConfig</servlet-name>
+        <servlet-class>org.opendatakit.aggregate.servlet.RdfTemplateConfigServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>rdfTemplateConfig</servlet-name>
+        <url-pattern>/rdfTemplateConfig</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
         <servlet-name>formXml</servlet-name>
         <servlet-class>org.opendatakit.aggregate.servlet.FormXmlServlet</servlet-class>
     </servlet>
