Split template configuration into separate files, added display name

--- a/src/main/resources/rdfExport/rdfExportTemplateConfig.yml
+++ b/src/main/resources/rdfExport/rdfExportTemplateConfig.yml
@@ -1,11 +1,6 @@
 availableProperties:
-- Creator
-- Unit
-- Characteristic
+  - Creator
+  - Unit
+  - Characteristic
 templates:
-  oboe:
-    optionalProperties:
-    - Creator
-    requiredProperties:
-    - Characteristic
-    - Unit
+  - oboe
