XML template can now include semantic annotations as attributes

--- a/src/main/resources/templateExport/mustache_templates/xml/config.yml
+++ b/src/main/resources/templateExport/mustache_templates/xml/config.yml
@@ -2,4 +2,7 @@ displayName: XML
 filetype: .xml
 templateProperties:
   optionalProperties:
+    - Creator
+    - Unit
+    - Characteristic
   requiredProperties:
